Refactoring to a client lib, add guests, add better user profile support